# nirantk.github.io

./: .gitignore  .markdownlint.json  .stylelintrc.json  404.html  Brewfile  _index.md  about.md  blog_transformation.py  config.toml  consult.md  demoday102023.md  fix-front-matter.py  hugo.yaml  index.html  index.xml  mkdocs.yml  objects.inv  pyproject.toml  requirements-doc.txt  sitemap.xml  tags.json
about/: index.html
ai/: .gitignore  01_Extraction.ipynb  20230507_Messages.csv
categories/: index.html
community/: index.html
community_dev/: .gitignore  20230505_Messages.csv  20230507_Messages.csv  20230726_Messages.csv  20230812_Messages.csv  20240520_Messages.csv  README.md  blog_transformation.py  pyproject.toml  whatsapp_analyzer.py
community_dev/.cursor/rules/: agent.mdc  logging.mdc  packaging.mdc  python-formatting.mdc
community_dev/messages/: 20240514_Messages.csv
community_dev/nbs/: 00_Playground.ipynb  00_PrivateCommunityStats.ipynb  01_Extraction.ipynb  01_Listwise.ipynb  02_Exploration.ipynb  02_Listwise.ipynb  02_Pairwise.ipynb  03_NewCode.ipynb  03_PrivateCommunityStats.ipynb  100_inactive_users.csv  Exploration.py  Extraction.py  PrivateCommunityStats.py  Summarization.py  ai_policy.txt  community.txt  creatives.txt  daily_backup.json  deepmedia.txt  formatting_functions.py  formatting_utils.py  gpu.txt  inactive_users.csv  inactive_users_master.csv  main.txt  parsing_utils.py  private_community_stats.py  prompts.py  requirements.txt  startup_ecosystem.txt  summarisation.py  whatsapp_parser.py
community_dev/nbs/.ipynb_checkpoints/: 02_Exploration-checkpoint.ipynb
community_dev/src/: extraction.py  formatting_utils.py  parsing_utils.py  private_community_stats.py  prompts.py  summarisation.py
community_dev/web_app/: README.md  TODO.md  main.py  requirements.txt
(+776 files in other folders)
