[tool.poetry]
name = "https://nirantk.com"
authors = ["NirantK <nirant.bits@gmail.com>"]
packages = [{include = "nirantk"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.docs.dependencies]
mkdocs-material = ">=9.5.10"
mkdocstrings = ">=0.24.0"
pillow = ">=10.2.0"
cairosvg = ">=2.7.1"
mknotebooks = ">=0.8.0"
