[tool.poetry]
name = "community-dev"
version = "0.1.0"
description = ""
authors = ["Nirant Kasliwal <nirant.bits@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9, <3.12"
pandas = "^2.2.2"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
